# meetpy

./: .env.ci  .env.example  .gitignore  .hgignore  .travis.yml  Dockerfile  Dockerfile-dev  Dockerfile.dev  Dockerfile.poetry  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  compose.yaml  docker-compose-dev.yml  docker-compose.yml  fabfile.py  provision-new-dev-env.sh  provision-new-dev-envirionment.sh  provision-pykonik.sh  pyproject.toml  requirements-pg.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
deploy/supervisord/: meetpy.ini  supervisord.conf
deployment/: core.yml  debug.yml  deploy.yml  hosts  setup-local-db.yml
deployment/group_vars/: all.yml  github.yml  local.yml  secret.yml
meetpy/: .coveragerc  Makefile  manage.py  pytest.ini
meetpy/meetpy/: settings.py  urls.py  wsgi.py
meetpy/meetups/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
meetpy/misc/: admin.py  context_processors.py  models.py  sitemaps.py  urls.py  views.py
meetpy/templates/: base.html  base_content.html
meetpy/tests/: conftest.py  factories.py  test_admin.py  test_meetup_routing.py  test_meetups.py  tools.py
pygroups/: manage.py
pygroups/meetups/: admin.py  forms.py  models.py  tests.py  views.py
pygroups/misc/: context_processors.py  sitemaps.py
pygroups/pygroups/: wsgi.py
pygroups/templates/: base.html
pykonik/: manage.py
pykonik/meetups/: constants.py  models.py  tests.py
pykonik/misc/: context_processors.py  (+3 more)
pywaw/: manage.py
requirements/: base.in  base.txt  production.txt  staging.txt
(+149 files in other folders)
