[tool.poetry]
name = "meetpy"
version = "0.1.0"
description = "MeetPy - a project of common and unified webpage for all polish python meetups"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "meetpy" }]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2.15,<3.3.0"
pillow = "^10.0.1"
django-embed-video = "^1.4.9"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"

psycopg2-binary = { version = "^2.9.8", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
djet = "^0.3.0"
factory-boy = "<3.0.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
isort = "^5.12.0"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


